src/styles/prose.css
.prose {
  font-size: var(--fs-sm);
  color: var(--c-prose-text);
}

.prose img {
  max-height: 50dvh;
  width: auto;
}

.prose :is(p, li, blockquote) {
  text-wrap: pretty;
}

.prose p,
.prose ul,
.prose ol,
.prose li,
.prose blockquote,
.prose table {
  line-height: 2;
}

@scope (.prose) to (.not-prose) {
  :scope > * {
    margin-block: 2rem;
  }
}

.prose p {
  margin-block: 1.75rem;
}

.prose h1,
.prose h2,
.prose h3,
.prose h4 {
  font-weight: var(--fw-medium);
  line-height: 1.75;
  color: var(--c-text);
  transition: color 1s;
}

.prose h1 {
  font-size: 1rem;
}

.prose :is(h2, h3, h4) {
  font-size: var(--fs-sm);
}

.prose h1 {
  margin-top: 0;
}

.prose :is(h2, h3, h4) {
  position: relative;
  padding-left: 0.75rem;
}

.prose :is(h2, h3, h4)::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  border-radius: var(--radius-full);
}

.prose h2 {
  margin-block: 3.5rem 1.25rem;
}

.prose h2::before {
  width: 3px;
  background: var(--c-text);
}

.prose h3 {
  margin-block: 2.5rem 1rem;
}

.prose h3::before {
  width: 2px;
  background: var(--c-sub);
}

.prose h4 {
  margin-block: 2rem 0.75rem;
}

.prose h4::before {
  width: 1px;
  background: var(--c-sub);
}

.prose :is(h2, h3, h4) + * {
  margin-top: 0;
}

.prose :is(p, td, li) > a {
  color: var(--c-link);
  font-weight: var(--fw-medium);
  text-decoration-thickness: 1px;
  text-underline-offset: 4px;
  transition: text-decoration 0.2s;

  &:hover {
    text-decoration: underline;
  }

  &:visited {
    color: var(--c-link-visited);

    & svg {
      stroke: currentColor;
    }
  }
}

.prose strong {
  font-weight: var(--fw-normal);
  background: linear-gradient(transparent 60%, var(--c-strong) 0);
}

.prose code {
  display: inline-block;
  font-family: var(--font-mono);
  font-size: var(--fs-sm);
  color: var(--c-code-text);
  background-color: var(--c-code-bg);
  border-radius: var(--radius-xs);
  line-height: 1.5;
  padding-inline: 0.375rem;
  margin-inline: 0.125rem;
  box-shadow: inset 0 0 0 0.75px var(--c-code-border);
}

.prose blockquote {
  border-left: 2px solid light-dark(var(--uchu-gray-2), var(--uchu-gray-9));
  padding-left: 1.5rem;
  font-style: italic;
}

.prose ul {
  list-style-type: "-";
  padding-left: 0.5rem;
}

.prose ol {
  list-style-type: decimal;
  padding-left: 1rem;
}

.prose li::marker {
  font-size: var(--fs-sm);
  font-weight: var(--fw-medium);
}

.prose li :is(ol, ul) {
  margin-block: 0.25rem;
  padding-left: 0.5rem;
}

.prose li :is(li, p) {
  margin-block: 0.25rem;
}

.prose :is(ul, ol) > li::marker {
  color: var(--c-sub);
}

.prose .contains-task-list {
  list-style: none;
  padding-left: 0;

  & > li {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    padding-left: 0;
  }
}

.prose hr {
  margin-block: 5rem;
  height: 1px;
  width: 100%;
  background-color: var(--c-hr);
  border: none;
}

.prose table {
  display: block;
  overflow-x: auto;
  text-align: left;
  font-size: var(--fs-sm);
  scroll-timeline: --table-scroll inline;
  -ms-overflow-style: none;
  scrollbar-width: none;

  animation: table-scroll-mask linear both;
  animation-timeline: --table-scroll;
}

.prose :is(th, td) {
  white-space: nowrap;
}

.prose table::-webkit-scrollbar {
  display: none;
}

@keyframes table-scroll-mask {
  0% {
    mask-image: linear-gradient(
      to right,
      var(--uchu-yin) calc(100% - 2rem),
      transparent
    );
  }
  1%,
  99% {
    mask-image: linear-gradient(
      to right,
      transparent,
      var(--uchu-yin) 2rem,
      var(--uchu-yin) calc(100% - 2rem),
      transparent
    );
  }
  100% {
    mask-image: linear-gradient(
      to right,
      transparent,
      var(--uchu-yin) 2rem,
      var(--uchu-yin) 100%
    );
  }
}

.prose thead {
  border-bottom: 1px solid light-dark(var(--uchu-gray-2), var(--uchu-yin-8));
}

.prose thead th {
  font-weight: var(--fw-medium);
  vertical-align: bottom;
  padding-bottom: 0.5rem;
}

.prose thead th:not(:first-child) {
  padding-left: 0.5rem;
}

.prose thead th:not(:last-child) {
  padding-right: 0.5rem;
}

.prose tbody tr {
  border-bottom: 1px solid light-dark(var(--uchu-gray-1), var(--uchu-yin-9));

  &:last-child {
    border-bottom: 0;
  }
}

.prose tbody td {
  vertical-align: baseline;
}

.prose tfoot {
  border-top: 1px solid light-dark(var(--uchu-gray-2), var(--uchu-yin-8));
}

.prose tfoot td {
  vertical-align: top;
}

.prose :is(tbody, tfoot) td {
  padding-block: 0.5rem;
}

.prose :is(tbody, tfoot) td:not(:first-child) {
  padding-left: 0.5rem;
}

.prose :is(tbody, tfoot) td:not(:last-child) {
  padding-right: 0.5rem;
}

